<resources>
    <string name="app_name">Spending Monitor</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="category">Kategória</string>
    <string name="denomination">Megnevezés</string>
    <string name="value">Érték</string>
    <string name="ft">Ft</string>
    <string name="save">Mentés</string>
    <string name="error_empty_name">Nincs megadva név!</string>
    <string name="error_empty_value">Nincs megadva érték!</string>
    <string name="statistics">Statisztika</string>
    <string name="income">Bevétel</string>
    <string name="outgoing">Kiadás</string>
    <string name="balance">Egyenleg</string>
</resources>
