<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/llOutgoing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llIncome"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/outgoing" />

        <TextView
            android:id="@+id/tvOutgoing"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="60 000 Ft"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/statistics"
        android:textSize="32sp" />

    <LinearLayout
        android:id="@+id/llIncome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:text="@string/income" />

        <TextView
            android:id="@+id/tvIncome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="30 000 Ft"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llOutgoing"
        android:layout_alignStart="@+id/llIncome"
        android:orientation="horizontal"
        android:layout_alignLeft="@+id/llIncome"
        android:weightSum="2">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/balance" />

        <TextView
            android:id="@+id/tvBalance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="30 000 Ft"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>